[gd_scene load_steps=7 format=3 uid="uid://b2g08umhm2j37"]

[ext_resource type="Script" path="res://Main Menu/options_menu.gd" id="1_jhsw5"]
[ext_resource type="PackedScene" uid="uid://bf82nf6ulcl7t" path="res://Main Menu/input_map_button.tscn" id="2_7q6s3"]
[ext_resource type="Script" path="res://Main Menu/listen_for_input_panel.gd" id="3_ld16u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r27vb"]
bg_color = Color(0.384314, 0.376471, 0.368627, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3rut6"]
resource_local_to_scene = true
bg_color = Color(0.17, 0.17, 0.1666, 0)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c0mrq"]
resource_local_to_scene = true
bg_color = Color(0.17, 0.17, 0.1666, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 286.0
offset_top = 93.0
offset_right = -286.0
offset_bottom = -93.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jhsw5")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r27vb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.0
offset_top = -157.0
offset_right = 153.0
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResetButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Reset to Default"

[node name="MuteToggle" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Mute Audio"

[node name="InputMapButton" parent="VBoxContainer" instance=ExtResource("2_7q6s3")]
layout_mode = 2
text = "  "
input_event_name = "up"
input_display_name = "Up"

[node name="InputMapButton2" parent="VBoxContainer" instance=ExtResource("2_7q6s3")]
layout_mode = 2
text = "  "
input_event_name = "down"
input_display_name = "Down"

[node name="InputMapButton3" parent="VBoxContainer" instance=ExtResource("2_7q6s3")]
layout_mode = 2
text = "  "
input_event_name = "left"
input_display_name = "Left"

[node name="InputMapButton4" parent="VBoxContainer" instance=ExtResource("2_7q6s3")]
layout_mode = 2
text = "  "
input_event_name = "right"
input_display_name = "Right"

[node name="XButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -29.0
offset_top = 8.0
offset_right = -5.0
offset_bottom = 33.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 12
text = "x"

[node name="ListenForInputPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3rut6")
script = ExtResource("3_ld16u")

[node name="Panel" type="Panel" parent="ListenForInputPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -30.0
offset_right = 190.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c0mrq")

[node name="Label" type="Label" parent="ListenForInputPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -20.0
offset_right = 85.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
text = "Listening for input... (Esc to cancel)"
horizontal_alignment = 1
vertical_alignment = 1
